--- a/.gitignore
+++ b/.gitignore
@@ -82,8 +82,10 @@ web_modules/
 
 # dotenv environment variable files
 .env
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 .env.local
 
